--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="parallax">
-  <div class="parallax__layer parallax__layer--back">SCROLLINGs</div>
+  <div class="parallax__layer parallax__layer--back"></div>
   <div class="parallax__layer parallax__layer--base">
     <div class="posts">
       {% for post in site.posts %}
