--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="parallax">
   <div class="parallax__layer parallax__layer--back"></div>
   <div class="parallax__layer parallax__layer--base">
-    <div id='title'>the MANY</div>
+    <div id='title'>MANY</div>
     <div class="posts">
       {% for post in site.posts %}
         <article class="post flip-container">
